Corrected email add

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     <p>
       To contact croissant.com, please email us at
       <a href="mailto:hello@croissant.com" title="contact us by email"
-        >Contact us at hello@croissant.com
+        >hello@croissant.com
       </a>
       for more info!
     </p>
